fix modal backdrop z-index issue

--- a/Neptune.Web/src/scss/_custom-bootstrap.scss
+++ b/Neptune.Web/src/scss/_custom-bootstrap.scss
@@ -222,3 +222,6 @@ a:hover {
 
 
 
+ngb-modal-backdrop {
+  z-index: 1050 !important;
+}
